fix: mobile-only spacing for title

--- a/src/styles/image-well.scss
+++ b/src/styles/image-well.scss
@@ -72,19 +72,19 @@
       position: relative;
     }
 
-    .project-title {
-      display: none;
-      font-family: "Helvetica Roman";
-      letter-spacing: -0.4px;
-      line-height: 92%;
-      text-transform: uppercase;
-      min-width: 300px;
-      min-height: 50px;
-      text-align: center;
-      transform: translate(-50%, -50%);
-      position: absolute;
-      z-index: 999999999999999999999999999999999;
-    }
+    // .project-title {
+    //   display: none;
+    //   font-family: "Helvetica Roman";
+    //   letter-spacing: -0.4px;
+    //   line-height: 92%;
+    //   text-transform: uppercase;
+    //   min-width: 300px;
+    //   min-height: 50px;
+    //   text-align: center;
+    //   transform: translate(-50%, -50%);
+    //   position: absolute;
+    //   z-index: 999999999999999999999999999999999;
+    // }
     .test-relative {
       position: relative;
       width: 100%;
